# sysengineering

./: .gitignore  README.md
container_runtime/: Dockerfile  Makefile  README.md  conda.yaml  docker-compose.yml  pyproject.toml
container_runtime/.github/workflows/: ci.yml
container_runtime/docs/: design.md
container_runtime/src/container_runtime/: __init__.py
container_runtime/src/container_runtime/adapters/inbound/: __init__.py  rest_api.py
container_runtime/src/container_runtime/adapters/outbound/: __init__.py  mock_cgroups_manager.py  mock_namespace_manager.py
container_runtime/src/container_runtime/domain/entities/: container.py  job.py
container_runtime/src/container_runtime/domain/services/: container_manager.py  image_manager.py  scheduler.py
container_runtime/src/container_runtime/domain/value_objects/: identifiers.py
container_runtime/src/container_runtime/infrastructure/: config.py  container.py  logging.py  metrics.py  tracing.py
container_runtime/src/container_runtime/ports/inbound/: __init__.py
container_runtime/src/container_runtime/ports/outbound/: __init__.py
container_runtime/tests/: conftest.py
container_runtime/tests/integration/: test_container_lifecycle.py
container_runtime/tests/unit/: test_config.py  test_core.py
db_engine/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conda.yaml  docker-compose.yml  pyproject.toml
db_engine/.github/workflows/: ci.yml
db_engine/docs/: design.md
db_engine/src/db_engine/: __init__.py
db_engine/src/db_engine/adapters/: __init__.py
db_engine/src/db_engine/adapters/inbound/: __init__.py  rest_api.py  sql_parser.py
db_engine/src/db_engine/adapters/outbound/: __init__.py  file_disk_manager.py  file_wal_writer.py  lru_buffer_pool.py
db_engine/src/db_engine/application/: __init__.py  database_engine.py  executor.py
db_engine/src/db_engine/domain/entities/: __init__.py  btree_node.py  page.py  record.py  wal_record.py
db_engine/src/db_engine/domain/services/: __init__.py  btree_index.py  lock_manager.py  recovery_service.py  transaction_manager.py
db_engine/src/db_engine/domain/value_objects/: __init__.py  identifiers.py  transaction_types.py
db_engine/src/db_engine/infrastructure/: __init__.py  config.py  container.py  logging.py  metrics.py  tracing.py
db_engine/src/db_engine/ports/: __init__.py
db_engine/src/db_engine/ports/inbound/: __init__.py  buffer_pool.py  index_manager.py  transaction_manager.py  wal_manager.py
db_engine/src/db_engine/ports/outbound/: __init__.py  disk_manager.py  wal_writer.py
db_engine/tests/: conftest.py
db_engine/tests/integration/: test_database_engine.py
db_engine/tests/unit/: test_btree_index.py  test_btree_node.py  test_config.py  test_debug_limit.py  test_executor.py  test_file_disk_manager.py  test_file_wal_writer.py  test_identifiers.py  test_lock_manager.py  test_lru_buffer_pool.py  test_page.py  test_record.py  test_recovery_service.py  test_sql_parser.py  test_transaction_manager.py  test_transaction_types.py  test_wal_record.py
gpu_platform/: Dockerfile  Makefile  (+4 more)
object_store/: Dockerfile  Makefile  README.md  conda.yaml  docker-compose.yml  pyproject.toml
object_store/.github/workflows/: ci.yml
object_store/docs/: design.md
object_store/src/object_store/: __init__.py
object_store/src/object_store/adapters/inbound/: __init__.py  rest_api.py
object_store/src/object_store/domain/entities/: __init__.py  bucket.py  chunk.py  object.py
object_store/src/object_store/domain/services/: __init__.py  erasure_coding_service.py  storage_service.py
object_store/src/object_store/infrastructure/: config.py  container.py  logging.py  metrics.py  tracing.py
object_store/src/object_store/ports/inbound/: __init__.py
object_store/tests/: conftest.py
object_store/tests/integration/: test_object_lifecycle.py
object_store/tests/unit/: test_config.py  test_core.py
secure_platform/: Dockerfile  Makefile  README.md  conda.yaml  pyproject.toml
secure_platform/docs/: design.md
secure_platform/src/secure_platform/: __init__.py
secure_platform/src/secure_platform/adapters/inbound/: __init__.py  rest_api.py
secure_platform/src/secure_platform/application/: __init__.py  coordinator.py
secure_platform/src/secure_platform/domain/: __init__.py
secure_platform/src/secure_platform/domain/entities/: audit.py  certificate.py  policy.py
secure_platform/src/secure_platform/domain/services/: audit_logger.py  pki_manager.py  policy_engine.py
secure_platform/src/secure_platform/domain/value_objects/: identifiers.py
secure_platform/src/secure_platform/infrastructure/: config.py  container.py  logging.py  metrics.py  tracing.py
secure_platform/src/secure_platform/ports/inbound/: __init__.py  api.py
secure_platform/tests/integration/: test_auth_flow.py
secure_platform/tests/unit/: test_core.py
security_agent/: Dockerfile  Makefile  README.md  conda.yaml  docker-compose.yml  pyproject.toml
security_agent/.github/workflows/: ci.yml
security_agent/docs/: design.md
security_agent/src/security_agent/: __init__.py
security_agent/src/security_agent/adapters/inbound/: __init__.py  rest_api.py
security_agent/src/security_agent/infrastructure/: config.py  container.py  logging.py  metrics.py  tracing.py
security_agent/tests/: conftest.py
security_agent/tests/integration/: test_detection_response.py
security_agent/tests/unit/: test_config.py  test_core.py
streaming_system/: Dockerfile  Makefile  README.md  conda.yaml  docker-compose.yml  pyproject.toml
streaming_system/.github/workflows/: ci.yml
streaming_system/docs/: design.md
streaming_system/src/streaming_system/: __init__.py
streaming_system/src/streaming_system/application/: __init__.py  coordinator.py
streaming_system/src/streaming_system/domain/: __init__.py
streaming_system/src/streaming_system/infrastructure/: config.py  container.py  logging.py  metrics.py  tracing.py
streaming_system/tests/: conftest.py
streaming_system/tests/integration/: test_produce_consume.py
streaming_system/tests/unit/: test_config.py  test_core.py
(+92 files in other folders)
